[package]
name = "distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
futures = "0.3"
async-std = { version = "1.11.0", features = ["attributes"]}
num-traits = "0.2.15"