[package]
name = "distance"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.34", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
futures = "0.3"
async-std = { version = "1.11.0", features = ["attributes"]}
num-traits = "0.2.15"
bio = "1.2.0"
thiserror = "2.0.17"
